2013-10-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Move sleep routines to grub-core/osdep.

2013-10-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Move OS-dependent files to grub-core/osdep and document it.

2013-10-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/misc.c (canonicalize_file_name): Move to ...
	* grub-core/kern/emu/hostdisk_*.c (canonicalize_file_name): ... here.

2013-10-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/arm/misc.S: Remove leftover ARM and THUMB.

2013-10-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/misc.c: Remove leftover inclusion of malloc.h.

2013-10-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/setjmp.h: Remove leftover GRUBOF.

2013-10-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/raid.c: Fold into ...
	* util/getroot_linux.c: ... here. Make all functions static.

2013-10-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs_lz4.c: Switch from ad-hoc endiannes and width
	macros to GRUB ones.

2013-10-08  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/gui_list.c (draw_scrollbar): Fixed rare
	occasional bug. If there are too many boot entries or too low
	scrollbar height then we need to use another formula to calculate
	the position and size of the scrollbar thumb.

2013-10-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/random_unix.c: Add NetBSD, Solaris and Mac OS X to verified list.

2013-10-08  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/gui_list.c: New option `scrollbar-slice`.
	* docs/grub.texi: Likewise.

2013-10-08  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/gui_list.c: Draw the scrollbar in a separate
	viewport.

2013-10-08  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/gui_list.c (list_get_minimal_size): Corrected
	minimal width calculations.

2013-10-07  Vladimir Serbinenko  <phcoder@gmail.com>
